--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <meta name="apple-mobile-web-app-title" content="ds_market_place">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>ds_market_place</title>
+  <title>Nexus Marketplace</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
